# rocket-index

./: .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TASKS.md  coding-guidelines.md  justfile
.beads/: issues.jsonl
.claude-plugin/: marketplace.json
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
crates/fsharp-cli/: Cargo.toml
crates/fsharp-cli/src/: main.rs
crates/fsharp-cli/tests/: sqlite_workflow.rs
crates/fsharp-index/: Cargo.toml
crates/fsharp-index/src/: db.rs  external_index.rs  fsproj.rs  index.rs  lib.rs  parse.rs  resolve.rs  spider.rs  type_cache.rs
crates/fsharp-lsp/: Cargo.toml
crates/fsharp-lsp/src/: completion.rs  document_store.rs  main.rs
crates/rocketindex/: Cargo.toml
crates/rocketindex-cli/: Cargo.toml  build.rs
crates/rocketindex-cli/src/: guidelines.rs  lib.rs  main.rs  skills.rs  version_check.rs
crates/rocketindex-cli/src/mcp/: config.rs  format.rs  mod.rs  project_manager.rs  server.rs  tests.rs  watcher_pool.rs
crates/rocketindex-cli/src/mcp/tools/: callers.rs  definition.rs  enrich.rs  mod.rs  project.rs  references.rs  spider.rs  structure.rs  symbols.rs
crates/rocketindex-cli/tests/: cmd.rs  git_workflow.rs  language_integration.rs  setup_workflow.rs  sqlite_workflow.rs  version_check.rs
crates/rocketindex-cli/tests/cmd/: help.toml  version.toml
crates/rocketindex-lsp/: Cargo.toml
crates/rocketindex-lsp/src/: completion.rs  document_store.rs  main.rs
crates/rocketindex/benches/: resolve_benchmark.rs
crates/rocketindex/src/: batch.rs  config.rs  db.rs  external_index.rs  fsproj.rs  fuzzy.rs  git.rs  index.rs  lib.rs  parse.rs  pidfile.rs  ranking.rs  resolve.rs  spider.rs  stacktrace.rs  watch.rs
crates/rocketindex/src/languages/: mod.rs  ruby.rs
crates/rocketindex/src/languages/c/: mod.rs  parser.rs  resolver.rs
crates/rocketindex/src/languages/cpp/: mod.rs  parser.rs  resolver.rs
crates/rocketindex/src/languages/csharp/: mod.rs  parser.rs  resolver.rs
crates/rocketindex/src/languages/fsharp/: mod.rs  parser.rs  resolver.rs
crates/rocketindex/src/languages/go/: mod.rs  parser.rs  resolver.rs
crates/rocketindex/src/languages/haxe/: mod.rs  parser.rs  resolver.rs
crates/rocketindex/src/languages/java/: mod.rs  parser.rs  resolver.rs
crates/rocketindex/src/languages/javascript/: mod.rs  parser.rs  resolver.rs
crates/rocketindex/src/languages/kotlin/: mod.rs  parser.rs  resolver.rs
crates/rocketindex/src/languages/objc/: mod.rs  parser.rs  resolver.rs
crates/rocketindex/src/languages/php/: mod.rs  parser.rs  resolver.rs
crates/rocketindex/src/languages/python/: mod.rs  parser.rs  resolver.rs
crates/rocketindex/src/languages/ruby/: mod.rs  parser.rs  resolver.rs
crates/rocketindex/src/languages/rust/: mod.rs  parser.rs  resolver.rs
crates/rocketindex/src/languages/swift/: mod.rs  parser.rs  resolver.rs
crates/rocketindex/src/languages/typescript/: mod.rs  parser.rs  resolver.rs
design/: ALGORITHMIC_IMPROVEMENTS.md  KNOWN_LIMITATIONS.md  RFC-001-TASKS.md  RFC-001-hybrid-type-architecture.md  ROADMAP.md  ai-agent-integration-strategy.md  algorithms-review.md  beta-readiness.md  code-review-feedback.md  fsharp-tools-design.md  language-tools-competitive-analysis.md
docs/benchmarks/: results.md
docs/rfcs/: 002-performance-scaling.md
examples/HelloWorld/: Program.fs
examples/TestApp/: TestApp.fsproj
examples/TestApp/.cursor/: rules
examples/TestApp/.rocketindex/: index.db
extensions/zed-fsharp/: Cargo.toml  README.md  extension.toml  test-highlighting.fs
extensions/zed-fsharp/languages/fsharp/: brackets.scm  config.toml  folds.scm  highlights.scm  highlights.scm.backup  indents.scm  locals.scm  outline.scm
extensions/zed-fsharp/scripts/: validate_highlights.py
extensions/zed-fsharp/src/: lib.rs
extensions/zed-fsharp/test-app/: Domain.fs  Program.fs  Services.fs
integrations/claude-code/: fsharp-def.md  fsharp-spider.md  rocketindex-def.md  rocketindex-spider.md
integrations/claude-skill/: SKILL.md
packaging/scoop/: README.md
plugins/claude-code/: README.md
plugins/claude-code/.claude-plugin/: plugin.json
plugins/claude-code/hooks/: hooks.json  inject-project-root.sh
scripts/: README.md  benchmark_ai_agent.sh  benchmark_lsp.py  benchmark_semantic.sh  benchmark_transaction_batching.sh  bump-version.sh  extract-types.fsx  generate-test-report.py  install-hooks.sh  setup-test-fixtures.sh  test-fixtures.sh  test-real-repos-config.json  test-real-repos.sh
scripts/benchmarks/: aggregate_results.py  run_benchmark.sh  stress_test_auto_refresh.sh
scripts/benchmarks/archive/: agents_md_vs_mcp.sh
scripts/benchmarks/results/: ruby_haiku_find_callers_factory_20251209_115156.json  ruby_haiku_find_callers_factory_baseline.json  ruby_haiku_find_definition_factory_20251209_104604.json  ruby_opus_find_callers_factory_20251209_121515.json  ruby_opus_find_callers_factory_20251209_121753.json  ruby_opus_find_definition_factory_20251209_121359.json  ruby_sonnet_find_callers_factory_20251209_115246.json  ruby_sonnet_find_callers_factory_baseline.json  ruby_sonnet_find_definition_factory_20251209_105004.json  ruby_sonnet_find_definition_factory_20251209_115406.json  rust_haiku_find_definition_spawn_20251209_105038.json  rust_sonnet_find_definition_spawn_20251209_105133.json
scripts/benchmarks/results/agents_md_vs_mcp/: SPIKE_RESULTS.md
scripts/benchmarks/tasks/: ruby_vets_api.json  rust_tokio.json  typescript_nestjs.json
scripts/hooks/: pre-commit  pre-push
tests/claude-plugin-integration/: README.md
tests/claude-plugin-integration/results/: c-sample_test.json  cpp-sample_test.json  csharp-sample_test.json  fsharp-sample_test.json  go-sample_test.json  java-sample_test.json  javascript-sample_test.json  php-sample_test.json  python-sample_test.json  ruby-sample_test.json  rust-sample_test.json  typescript-sample_test.json
tests/claude-plugin-integration/scripts/: analyze-results.py  test-all.sh  test-language.sh
tests/claude-plugin-integration/test-repos/c-sample/: main.c  (+4 more)
tests/fixtures/: manifest.yaml
(+50 files in other folders)
