[workspace]
resolver = "2"
members = [
    "crates/rocketindex",
    "crates/rocketindex-cli",
    "crates/rocketindex-lsp",
]
# Note: zed-fsharp extension is built separately with its own toolchain

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Dawson Design Ltd."]
repository = "https://github.com/rocket-tycoon/rocket-index"

[workspace.dependencies]
# Shared dependencies across crates
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# tree-sitter for parsing
tree-sitter = "0.24"
tree-sitter-fsharp = "0.1.0"

# LSP dependencies
tower-lsp = "0.20"

# CLI dependencies
clap = { version = "4.0", features = ["derive"] }

# File watching
notify = "6.0"

# Parallelism
rayon = "1.10"

# XML parsing for .fsproj files
quick-xml = "0.37"

# SQLite for index storage
rusqlite = { version = "0.31", features = ["bundled"] }

# Internal crates
rocketindex = { path = "crates/rocketindex" }
