[workspace]
resolver = "2"
members = [
    "crates/rocketindex",
    "crates/rocketindex-cli",
    "crates/rocketindex-lsp",
]
# Note: zed-fsharp extension is built separately with its own toolchain

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "LicenseRef-BSL-1.1"
authors = ["Alastair Dawson"]
repository = "https://github.com/rocket-tycoon/rocket-index"

[workspace.dependencies]
# Shared dependencies across crates
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# tree-sitter for parsing
tree-sitter = "0.25"
tree-sitter-fsharp = "0.1.0"

# LSP dependencies
tower-lsp = "0.20"

# MCP (Model Context Protocol) server
rmcp = { version = "0.10", features = ["server", "transport-io"] }
dirs = "5.0"

# CLI dependencies
clap = { version = "4.0", features = ["derive"] }
dialoguer = "0.11"
ureq = { version = "2.10", features = ["json"] }
semver = "1.0"
self_update = { version = "0.41", features = ["archive-tar", "compression-flate2"] }

# File watching
notify = "8.2"

# Parallelism
rayon = "1.10"

# XML parsing for .fsproj files
quick-xml = "0.37"

# SQLite for index storage
rusqlite = { version = "0.31", features = ["bundled"] }

# Internal crates
rocketindex = { path = "crates/rocketindex" }

[profile.release]
lto = "thin"
strip = true
codegen-units = 1

# Patched tree-sitter-fsharp grammar to fix exponential parse time bug.
# Without this fix, files with `{ 1..10 }` sequence expressions take 60+ seconds
# to parse instead of milliseconds. The fix adds a `sequence_expression` rule
# and enables the `range_expression` in `_comp_or_range_expression`.
# See: crates/rocketindex/src/languages/fsharp/parser.rs::test_sequence_expression_parses_quickly
# TODO: Contribute upstream to ionide/tree-sitter-fsharp, then remove this patch
[patch.crates-io]
tree-sitter-fsharp = { path = "vendor/tree-sitter-fsharp" }
