[package]
name = "fsharp-index"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core library for F# symbol extraction, indexing, and name resolution"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

# tree-sitter for parsing
tree-sitter = { workspace = true }
tree-sitter-fsharp = { workspace = true }

# File watching for incremental updates
notify = { workspace = true }

# XML parsing for .fsproj files
quick-xml = { workspace = true }

[dev-dependencies]
tempfile = "3.0"
