[package]
name = "fsharp-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "A minimal F# language server for Zed"

[[bin]]
name = "fsharp-lsp"
path = "src/main.rs"

[dependencies]
fsharp-index.workspace = true

# LSP
tower-lsp.workspace = true

# tree-sitter for position lookup
tree-sitter.workspace = true
tree-sitter-fsharp.workspace = true

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
