[package]
name = "rocketindex-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Rocket-fast CLI for F# codebase indexing and navigation"

[[bin]]
name = "rkt"
path = "src/main.rs"

[dependencies]
rocketindex.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rayon.workspace = true
dialoguer.workspace = true

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
