[package]
name = "rocketindex-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Rocket-fast F# language server"

[[bin]]
name = "rocketindex-lsp"
path = "src/main.rs"

[dependencies]
rocketindex.workspace = true

# LSP
tower-lsp.workspace = true

# tree-sitter for position lookup
tree-sitter.workspace = true
tree-sitter-fsharp.workspace = true

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
