[package]
name = "rocketindex"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Rocket-fast F# code indexer - symbol extraction, indexing, and name resolution"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

# tree-sitter for parsing
tree-sitter = { workspace = true }
tree-sitter-fsharp = { workspace = true }

# File watching for incremental updates
notify = { workspace = true }

# XML parsing for .fsproj files
quick-xml = { workspace = true }

# SQLite for index storage (RFC-001)
rusqlite = { workspace = true }

# TOML parsing for config files
toml = "0.8"
tree-sitter-ruby = "0.23.1"
tree-sitter-python = "0.23.2"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"

[[bench]]
name = "resolve_benchmark"
harness = false
