[package]
name = "rocketindex"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Rocket-fast multi-language code indexer - symbol extraction, indexing, and name resolution"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

# tree-sitter for parsing
tree-sitter = { workspace = true }
tree-sitter-fsharp = { workspace = true }

# File watching for incremental updates
notify = { workspace = true }
notify-debouncer-full = "0.6"

# XML parsing for .fsproj files
quick-xml = { workspace = true }

# SQLite for index storage (RFC-001)
rusqlite = { workspace = true }

# TOML parsing for config files
toml = "0.8"

# Gitignore-aware file walking (same library ripgrep uses)
ignore = "0.4"
tree-sitter-ruby = "0.23.1"
tree-sitter-python = "0.23.2"
tree-sitter-rust = "0.23.2"
tree-sitter-go = "0.23.4"
tree-sitter-typescript = "0.23.2"
tree-sitter-javascript = "0.23.1"
tree-sitter-java = "0.23.5"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-php = "0.23.11"
tree-sitter-c = "0.23.4"
tree-sitter-cpp = "0.23.4"

# Unix process checks for PID file coordination
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"

[[bench]]
name = "resolve_benchmark"
harness = false
